--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <span class="text-primary">Karamfilov</span>
                     </h1>
                     <div class="subheading mb-5">
-                        69 Grosvenor Lodge, Dublin D06 D013 · (89) 966-3734 ·
+                        Dublin / Ireland· (89) 966-3734 ·
                         <a href="mailto:veselinyurievkaramfilov@gmail.com">veselinyurievkaramfilov@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">A fast learner with solid time management and multi-tasking skills. Strong work ethic in a team or individual setting to drive product success and process efficiency. Strong troubleshooting and problem-solving skills with an analytical mindset. And also a BSc Computing student in software.</p>
+                    <p class="lead mb-5">A fast learner with solid time management and multi-tasking skills. Strong work ethic in a team or individual setting to drive product success and process efficiency. Strong troubleshooting and problem-solving skills with an analytical mindset.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/veselin-karamfilov/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/veselinkaramfilov"><i class="fab fa-github"></i></a>
