--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <ul>
                               <li>Ensuring the clients receive the highest level of sales and operational customer service by leveraging a highly consultative approach</li>
                               <li>Using data science-driven workflows daily to increase engagement, reactivate and increase revenue</li>
-                              <li>Analysing market trends and campaign performance statistics on the VIP base and create new strategies</li>
+                              <li>Providing all kind of technical supports (game, account, device etc.)</li>
                             </ul>  
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2021 - Present</span></div>
