--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Dublin / Ireland· (89) 966-3734 ·
-                        <a href="mailto:veselinyurievkaramfilov@gmail.com">veselinyurievkaramfilov@gmail.com</a>
+                        <a href="mailto:veselinyurievkaramfilov@gmail.com">veselin.karamfilov@mail.com</a>
                     </div>
                     <p class="lead mb-5">A fast learner with solid time management and multi-tasking skills. Strong work ethic in a team or individual setting to drive product success and process efficiency. Strong troubleshooting and problem-solving skills with an analytical mindset.</p>
                     <div class="social-icons">
@@ -75,7 +75,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Covalen Solutions</h3>
-                            <div class="subheading mb-3">Customer Support Executive</div>
+                            <div class="subheading mb-3">Technical Support Executive</div>
                             <ul>
                               <li>Provided technical account and game support</li>
                               <li>Resolved customer queries related to a wide array of products using the relevant tools and systems</li>
