--- a/index.html
+++ b/index.html
@@ -62,46 +62,60 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Zynga</h3>
-                            <div class="subheading mb-3">Account Manager</div>
+                            <h3 class="mb-0">Dell Technologies</h3>
+                            <div class="subheading mb-3">Technical Support Engineer</div>
                             <ul>
-                              <li>Ensuring the clients receive the highest level of sales and operational customer service by leveraging a highly consultative approach</li>
-                              <li>Using data science-driven workflows daily to increase engagement, reactivate and increase revenue</li>
-                              <li>Providing all kind of technical supports (game, account, device etc.)</li>
-                            </ul>  
+                              <li>Providing support for the VxRail Hyper-Converged Infrastructure Appliance which contains VMware Products, Dell Servers, Cloud Services and Linux OS</li>
+                              <li>Troubleshooting highly complex hardware, software and configuration issues on servers/cloud systems</li>
+                              <li>Performing backup, clone and recovery, pre-upgrade health checks on customer environment through a remote connection, using Linux CLI</li>
+                              <li>Working closely with Sales, Product Management and Engineering to focus on developing support solutions to customer</li>
+                              <li>Managing own schedule of cases, which includes determining priority levels and negotiating and setting expectations with customers</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2022 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Covalen Solutions</h3>
+                            <h3 class="mb-0">Zynga</h3>
+                            <div class="subheading mb-3">Account Manager</div>
+                            <ul>
+                              <li>Researched, reproduced and led highly complex support (technical/non-technical) cases to resolution with a high sense of professionalism</li>
+                              <li>Used data science-driven workflows daily to increase engagement, reactivate and increase revenue</li>
+                              <li>Coordinated with internal stakeholders such as marketing and studio team to identify, report and speed up resolutions of problems</li>
+                              <li>Participated in development of app/web based games and accounts</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - March 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Covalen Solutions (Steam-Valve)</h3>
                             <div class="subheading mb-3">Technical Support Executive</div>
                             <ul>
-                              <li>Provided technical account and game support</li>
-                              <li>Resolved customer queries related to a wide array of products using the relevant tools and systems</li>
-                            </ul> 
-                            <p>at one of the biggest American video game developer, publisher, and digital distribution company</p> 
+                              <li>Provided technical assistance to customers, resolving game and account issues using the relevant tools and systems</li>
+                              <li>Identified processes and services, to improve quality, technical operations and overall customer experience</li>
+                              <li>Collaborated with the colleagues on investigations and escalations</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - July 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">GemPool Recruitment</h3>
+                            <h3 class="mb-0">GemPool Recruitment (Amazon)</h3>
                             <div class="subheading mb-3">Datacenter Technician</div>
                             <ul>
                               <li>Worked on Linux based systems and different types of servers</li>
                               <li>Troubleshoot hardware/software, components replacing and media verification</li>
                               <li>Utilised various hardware and software tools to diagnose issues</li>
                               <li>Managed very high standard of safety and security</li>
-                            </ul> 
-                            <p>at one of the biggest Data Center clusters in Ireland</p> 
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - February 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Turkish National Police</h3>
-                            <div class="subheading mb-3">Police Officer</div>
+                            <div class="subheading mb-3">Police Officer in IT Department</div>
                             <ul>
                               <li>Responded to queries on via email, in person, or through remote access</li>
                               <li>Offered technical assistance about configuration, set up, maintenance, and troubleshooting of computer systems</li>
@@ -109,7 +123,7 @@
                               <li>Diagnosed system errors and other issues</li>
                               <li>Installed and configured of CCTV and access control systems</li>
                               <li>Trained colleagues on troubleshooting and diagnosed problems</li>
-                            </ul> 
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2012 - April 2019</span></div>
                     </div>
@@ -122,7 +136,7 @@
                               <li>Performed periodic checks on equipment and solved problems as detected</li>
                               <li>Assisted in implementation of quality control programs</li>
                               <li>Observed and followed company safety rules and regulations</li>
-                            </ul> 
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2009 - January 2010</span></div>
                     </div>
@@ -135,7 +149,7 @@
                               <li>Resolved troubleshoot problems and provided guidance about system applications and electronic equipment</li>
                               <li>Managed network components and security solutions</li>
                               <li>Trained users in the proper use of hardware and software</li>
-                            </ul> 
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2008 - February 2009</span></div>
                     </div>
@@ -147,7 +161,7 @@
                               <li>Set up various computerized machinery to produce headlight in compliance with the given specifications</li>
                               <li>Operatedand servicedof machines</li>
                               <li>Identifiedand resolvedof technical problems</li>
-                            </ul> 
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2007 - January 2008</span></div>
                     </div>
@@ -161,7 +175,7 @@
                               <li>Maintained and repaired technological equipment or peripheral devices</li>
                               <li>Installed well-functioning networks</li>
                               <li>Provided technical support and service</li>
-                            </ul> 
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2002 - June 2003</span></div>
                     </div>
@@ -212,7 +226,9 @@
                         <li class="list-inline-item"><i class="fab fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fab fa-windows"></i></li>
                         <li class="list-inline-item"><i class="fab fa-confluence"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-salesforce"></i></li> 
+                        <li class="list-inline-item"><i class="fab fa-salesforce"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-aws"></i></li>
                     </ul>
                     <div class="subheading mb-3">Hardware, Networking & Other Skills</div>
                     <ul class="fa-ul mb-0">
@@ -230,7 +246,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Strong customer service and communication skills 
+                            Strong customer service and communication skills
                         </li>
                     </ul>
                 </div>
@@ -276,7 +292,13 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - Certificate of High Honor - Anadolu University
+                            Place - Certificate of High Honours - Anadolu University
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            1
+                            <sup>st</sup>
+                            Class Honours - National College of Ireland
                         </li>
                     </ul>
                 </div>
